sending mail completed

--- a/mail/templates/information.html
+++ b/mail/templates/information.html
@@ -9,6 +9,7 @@
         <div class="mb-3">
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="name" name="name" placeholder="Name" type="text">
         </div>
+        <h6>{{ message1 }}</h6>
         <div class="mb-3">
             <input class="form-control mx-auto w-auto" id="birth" name="birth" placeholder="Birth" type="text">
         </div>
@@ -21,6 +22,7 @@
         <div class="mb-3">
             <input class="form-control mx-auto w-auto" id="email" name="email" placeholder="Email" type="text">
         </div>
+        <h6>{{ message2 }}</h6>
         <button class="btn btn-primary" type="submit">Submit</button>
     </form>
 {% endblock %}
