--- a/mail/templates/register.html
+++ b/mail/templates/register.html
@@ -9,12 +9,15 @@
         <div class="mb-3">
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text">
         </div>
+        <h6>{{ message1 }}</h6>
         <div class="mb-3">
             <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="Password" type="password">
         </div>
+        <h6>{{ message2 }}</h6>
         <div class="mb-3">
             <input class="form-control mx-auto w-auto" id="confirmation" name="confirmation" placeholder="Confirmation" type="password">
         </div>
+        <h6>{{ message3 }}</h6>
         <button class="btn btn-primary" type="submit">Register</button>
     </form>
 {% endblock %}
