--- a/mail/templates/send.html
+++ b/mail/templates/send.html
@@ -1,4 +1,3 @@
-
 {% extends "layout.html" %}
 
 {% block title %}
@@ -6,29 +5,21 @@
 {% endblock %}
 
 {% block main %}
-
-<form action="/send" method="post">
-    {% for value in names %}
-    <table class="table">
-        <tr>
-            <th>Receiver</th>
-            <th>Mail</th>
-        </tr>
-        <tr>
-            <td>
-                <h5>{{ value['name'] }}</h5>
-                <h6 style="color:darkgrey">{{ value['email'] }}</h6>
-            </td>
-            <td>
-                <div class="input-group">
-                    <input autofocus name="mail" placeholder="Mail" type="text">
-                </div>
-                <button type="submit">Send</button>
-                <h6>{{ message3 }}</h6>
-            </td>
-        </tr>
-    </table>
-    {% endfor %}
-</form>
-
+    <form action="/send" method="post">
+        <div class="mb-3">
+            <input autofocus class="form-control mx-auto w-auto" id="receiver" name="receiver" placeholder="Friend's name" type="text">
+        </div>
+        <h6>{{ message1 }}</h6>
+        <div class="mb-3">
+            <input class="form-control mx-auto w-auto" id="email" name="email" placeholder="Email" type="text">
+        </div>
+        <h6>{{ message2 }}</h6>
+        <div class="mb-3">
+            <input class="form-control mx-auto w-auto" id="mail" name="mail" placeholder="Your mail" type="text">
+        </div>
+        <h6>{{ message3 }}</h6>
+        <button class="btn btn-primary" type="submit">Send</button>
+        <h6>{{ message4 }}</h6>
+    </form>
+   
 {% endblock %}
