--- a/mail/templates/layout.html
+++ b/mail/templates/layout.html
@@ -31,13 +31,12 @@
                     {% if session["user_id"] %}
                         <ul class="navbar-nav me-auto mt-2">
                             <li class="nav-item"><a class="nav-link" href="/send">Send mail</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/buy">Buy</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/sell">Sell</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/mail">Your Mails</a></li>
                             <li class="nav-item"><a class="nav-link" href="/history">History</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/add">Add Cash</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/change_information">Change Information</a></li>
                         </ul>
                         <ul class="navbar-nav ms-auto mt-2">
-                            <li class="nav-item"><a class="nav-link" href="/change">Change Password</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/change_password">Change Password</a></li>
                             <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
                         </ul>
                     {% else %}
