--- a/mail/templates/layout.html
+++ b/mail/templates/layout.html
@@ -16,7 +16,7 @@
 
         <link href="/static/styles.css" rel="stylesheet">
         <title>MAIL: {% block title %}{% endblock %}</title>
-        {% block attribute %}{% endblock %}
+        {% block script %}{% endblock %}
 
     </head>
 
