--- a/mail/templates/login.html
+++ b/mail/templates/login.html
@@ -4,16 +4,41 @@
     Log In
 {% endblock %}
 
+{% block script %}
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+
+        document.querySelector('form').onsubmit = function() {
+            username = document.querySelector('#username').value;
+            password = document.querySelector('#password').value;
+
+            if (username.length === 0)
+            {
+                alert('username required!');
+                return false;
+            }
+            else if (password.length === 0)
+            {
+                alert('password required!');
+                return false;
+            }
+            // submit
+            return true;
+        }
+    });
+</script>
+{% endblock %}
+
 {% block main %}
     <form action="/login" method="post">
         <div class="mb-3">
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text">
         </div>
-        <h6>{{ message1 }}</h6>
+        <h6 id="message1">{{ message1 }}</h6>
         <div class="mb-3">
             <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="Password" type="password">
         </div>
-        <h6>{{ message2 }}</h6>
+        <h6 id="message2">{{ message2 }}</h6>
         <button class="btn btn-primary" type="submit">Log In</button>
     </form>
 {% endblock %}
