--- a/mail/templates/login.html
+++ b/mail/templates/login.html
@@ -9,8 +9,8 @@
     document.addEventListener('DOMContentLoaded', function() {
 
         document.querySelector('form').onsubmit = function() {
-            username = document.querySelector('#username').value;
-            password = document.querySelector('#password').value;
+            const username = document.querySelector('#username').value;
+            const password = document.querySelector('#password').value;
 
             if (username.length === 0)
             {
@@ -32,7 +32,7 @@
 {% block main %}
     <form action="/login" method="post">
         <div class="mb-3">
-            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text">
+            <input autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text">
         </div>
         <h6 id="message1">{{ message1 }}</h6>
         <div class="mb-3">
