--- a/mail/templates/send.html
+++ b/mail/templates/send.html
@@ -11,7 +11,7 @@
         document.querySelector('form').onsubmit = function() {
             const receiver = document.querySelector('#receiver').value;
             const email = document.querySelector('#email').value;
-            const mail = document.querySelector('#mail').value;
+            const mail = document.querySelector('#floatingMail').value;
 
             if (receiver.length === 0)
             {
@@ -36,21 +36,23 @@
 {% endblock %}
 
 {% block main %}
+
     <form action="/send" method="post">
         <div class="mb-3">
-            <input autofocus class="form-control mx-auto w-auto" id="receiver" name="receiver" placeholder="Friend's name" type="text">
+            <input autofocus class="form-control mx-auto w-auto" id="receiver" name="receiver" placeholder="Receiver's name" type="text">
         </div>
         <h6 id="message1">{{ message1 }}</h6>
         <div class="mb-3">
-            <input class="form-control mx-auto w-auto" id="email" name="email" placeholder="Email" type="text">
+            <input class="form-control mx-auto w-auto" id="email" name="email" placeholder="name@example.com" type="text">
         </div>
         <h6 id="message2">{{ message2 }}</h6>
-        <div class="mb-3">
-            <input class="form-control mx-auto w-auto" id="mail" name="mail" placeholder="Your mail" type="text">
+        <div class="form-floating">
+            <input class="form-control" id="floatingMail" name="mail" placeholder="Mail" type="text">
+            <label for="floatingMail">Mail</label>
         </div>
-
+        <br>
         <button class="btn btn-primary" type="submit">Send</button>
         <h6 id="message4">{{ message4 }}</h6>
     </form>
-   
+
 {% endblock %}
