--- a/mail/templates/history.html
+++ b/mail/templates/history.html
@@ -14,38 +14,118 @@
             color:darkgrey;
         }
 
-        #head {
-            font-size: large;
+        .head
+        {
+            font-size: small;
+            font-weight: bold;
+            float: center;
         }
 
         #mail {
             font-style: italic;
+            float: center;
+        }
+
+        #div_mail
+        {
+            height: 100px;
         }
     </style>
 {% endblock %}
 
+<!----------------------------------------------------------->
+{% block script %}
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+
+        document.querySelector('form').onsubmit = function() {
+            const sender_email = document.querySelector('#sender_email').value;
+            const receiver_email = document.querySelector('#receiver_email').value;
+
+            if (sender_email.length === 0)
+            {
+                alert("Sender's email required!");
+                return false;
+            }
+            else if (receiver_email.length === 0)
+            {
+                alert("Receiver's email required!");
+                return false;
+            }
+            else if (sender_email === receiver_email)
+            {
+                alert("Sender's email and Receiver's email must be different!");
+                return false;
+            }
+
+            // submit
+            return true;
+        }
+    });
+</script>
+{% endblock %}
+
+
+<!--FIND HISTORIES-->
+{% block history %}
+
+    <form class="row g-3 needs-validation" novalidate style="display: flex;" action="/history" method="post">
+        
+        <!--Sender's email's field--> 
+        <div class="col-md-4">
+            <label for="validationCustom01" class="form-label">Sender's email</label>
+            <input type="text" class="form-control" id="sender_email" name="sender_email" placeholder="example@email.com" required>
+        </div>
+
+        <!--Receiver's email's field--> 
+        <div class="col-md-4">
+            <label for="validationCustom01" class="form-label">Receiver's email</label>
+            <input type="text" class="form-control" id="receiver_email" name="receiver_email" placeholder="example@email.com" required>
+        </div>
+
+        <!--Date's field--> 
+        <div class="col-md-4">
+            <label for="validationCustom01" class="form-label">Date</label>
+            <input type="text" class="form-control" id="date" name="date" placeholder="dd/mm/yyyy hh:mm:ss">
+        </div>
+
+        <br>
+
+        <!--Submit button--> 
+        <div class="col-12">
+            <button class="btn btn-primary" type="submit">Find</button>
+        </div>
+        
+    </form>
+
+{% endblock %}
+
+
+<!--DISPLAY ALL HISTORIES-->
 {% block main %}
     <h1>Your history</h1>
-    <table class="table">
-        <tr id="head">
-            <th scope="col">Sender</th>
-            <th scope="col">Receiver</th>
-            <th scope="col">Mail</th>
-            <th scope="col">Date</th>
-        </tr>
-        {% for history in histories %}
-        <tr>
-            <td>
-                <h5>{{ history['sender'] }}</h5>
-                <h6>{{ history['sender_email'] }}</h6>
-            </td>
-            <td>
-                <h5>{{ history['receiver'] }}</h5>
-                <h6>{{ history['receiver_email'] }}</h6>
-            </td>
-            <td id="mail">{{ history['mail'] }}</td>
+    <br>
+    <h4 id="message4">{{ message4 }}</h4>
+
+    {% for history in histories %}
+    <table class="table table-striped">
+        <tr class="head">
+            <td>From</td>
+            
+            <td>{{ history['sender'] }} <br> {{ history['sender_email'] }}</td>           
+            
+            <td>To</td>
+            
+            <td>{{ history['receiver'] }} <br>  {{ history['receiver_email'] }}</td>     
+            
             <td>{{ history['date'] }}</td>
-        </tr>
-        {% endfor %}
+        </tr> 
     </table>
+    <div id="div_mail">
+        <h5 id="mail">{{ history['mail'] }}</h5>    
+        <h6>Chỉnh cho text xuống hàng khi bấm Enter hoặc đụng tường</h6>   
+    </div>
+    {% endfor %}
+    
+
 {% endblock %}
