--- a/mail/templates/layout.html
+++ b/mail/templates/layout.html
@@ -17,6 +17,7 @@
         <link href="/static/styles.css" rel="stylesheet">
         <title>MAIL: {% block title %}{% endblock %}</title>
         {% block script %}{% endblock %}
+        {% block attribute %}{% endblock %}
         <script>
             document.addEventListener('DOMContentLoaded', function() {
                 
@@ -76,14 +77,21 @@
             </header>
         {% endif %}
 
+        <!--excetera.html-->
+        <div class="container-fluid py-5">
+            <!--information.html-->
+            {% block information %}{% endblock %}
+            
+            <!--send.html-->
+            {% block send %}{% endblock %}
+
+            <!--history.html-->
+            {% block history %}{% endblock %}
+        </div>
+
         <main class="container-fluid py-5 text-center">
             {% block main %}{% endblock %}
         </main>
-
-        <!--Infomation.html-->
-        <div class="container-fluid py-5">
-            {% block information %}{% endblock %}
-        </div>
         
     </body>
 
