--- a/mail/templates/check.html
+++ b/mail/templates/check.html
@@ -1,13 +1,82 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title>My Web Page!</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    </head>
-    <body>
-        <div class="container">
-            <h1>Hello, world!</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque elit magna, hendrerit a tortor eu, euismod lobortis dolor. Integer accumsan orci et semper bibendum.</p>
-        </div>
-    </body>
+<html>
+<head>
+<style> 
+div.ex1 {
+  background-color: lightblue;
+  height: 40px;
+  width: 70%;
+  overflow-y: scroll;
+}
+
+div.ex2 {
+  background-color: lightblue;
+  height: 40px;
+  width: 200px;  
+  overflow-y: hidden;
+}
+
+div.ex3 {
+  background-color: lightblue;
+  height: 40px;
+  width: 200px;  
+  overflow-y: auto;
+}
+
+div.ex4 {
+  background-color: lightblue;
+  height: 40px;
+  width: 200px;  
+  overflow-y: visible;
+}
+</style>
+</head>
+<body>
+
+<h1>The overflow-y Property</h1>
+
+<p>The overflow-y property specifies whether to clip the content, add a scroll bar, or display overflow content of a block-level element, when it overflows at the top and bottom edges.</p>
+
+<h2>overflow-y: scroll:</h2>
+<div class="ex1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. consectetur adipiscing elit. Etiam semper diam at erat pulvinar, 
+  at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhon
+  cus ut.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat p
+  ulvinar, at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero 
+  rhoncus ut.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pu
+  lvinar, at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat consectetur adipiscing elit. Etiam semper diam at erat pulvinar, 
+  at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhon
+  cus ut.Lorem m dolo
+    r sit amet, consecteturut.Lorem ipsum dolor sit ame
+    t, consectetur adipiscing elit. Etiam semper diam at erat pulvinar, at pulvinar felis blandit. V
+    estibulum volutpat tellus diam, consequat gravida libero rhoncus ut..</div>
+
+
+
+<h2>overflow-y: hidden:</h2>
+<div class="ex2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar, at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus ut.</div>
+
+<h2>overflow-y: auto:</h2>
+<div class="ex3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar,
+   at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus ut.
+   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar,
+   at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus ut.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar,
+   at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus ut.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar,
+   at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus ut.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar,
+   at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus ut.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar,
+   at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus ut.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar,
+   at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus ut.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar,
+   at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus ut.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar,
+   at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus ut.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar,
+   at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus ut.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar,
+   at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus ut.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar,
+   at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus ut.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar,
+   at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus ut.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar,
+   at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus ut.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar,
+   at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus ut.
+  </div>
+
+<h2>overflow-y: visible (default):</h2>
+<div class="ex4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar, at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus ut.</div>
+
+</body>
 </html>
