--- a/mail/templates/layout.html
+++ b/mail/templates/layout.html
@@ -15,9 +15,11 @@
         <link href="https://upload.wikimedia.org/wikipedia/commons/3/3d/Envelope-letter-icon.png" rel="icon">
 
         <link href="/static/styles.css" rel="stylesheet">
-        <title>MAIL: {% block title %}{% endblock %}</title>
-        {% block script %}{% endblock %}
+        <title>SKADOOSH: {% block title %}{% endblock %}</title>
+
         {% block attribute %}{% endblock %}
+
+        {% block script %}{% endblock %}
         <script>
             document.addEventListener('DOMContentLoaded', function() {
                 
@@ -43,16 +45,15 @@
 
         <nav class="bg-light border navbar navbar-expand-md navbar-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/"><span class="blue">M</span><span class="red">A</span><span class="yellow">I</span><span class="green">L</span></a>
+                <a class="navbar-brand" href="/"><span class="blue">S</span><span class="red">K</span><span class="yellow">A</span><span class="green">D</span><span class="blue">O</span><span class="red">O</span><span class="yellow">S</span><span class="green">H</span></a>
                 <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbar">
                     {% if session["user_id"] %}
                         <ul class="navbar-nav me-auto mt-2">
-                            <li class="nav-item"><a class="nav-link" href="/send">Send mail</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/mail">Your Mails</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/history">History</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/inbox">Inbox</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/sent">Sent</a></li>
                             <li class="nav-item"><a class="nav-link" href="/change_information">Change Information</a></li>
                         </ul>
                         <ul class="navbar-nav ms-auto mt-2">
@@ -69,6 +70,7 @@
             </div>
         </nav>
 
+
         {% if get_flashed_messages() %}
             <header>
                 <div class="alert alert-primary mb-0 text-center" role="alert">
@@ -78,15 +80,16 @@
         {% endif %}
 
         <!--excetera.html-->
-        <div class="container-fluid py-5">
+        <div class="container-fluid py-5" id="main">
             <!--information.html-->
             {% block information %}{% endblock %}
 
-            <!--send.html-->
-            {% block send %}{% endblock %}
+            <!--sent.html-->
+            {% block sent %}{% endblock %}
 
-            <!--history.html-->
-            {% block history %}{% endblock %}
+
+            <!--add_friends.html-->
+            {% block add_friends %}{% endblock %}
         </div>
 
         <main class="container-fluid py-5 text-center">
