--- a/mail/templates/layout.html
+++ b/mail/templates/layout.html
@@ -74,7 +74,7 @@
         {% if get_flashed_messages() %}
             <header>
                 <div class="alert alert-primary mb-0 text-center" role="alert">
-                    {{ get_flashed_messages() | join(" ") }}
+                    {{ get_flashed_messages() | join("thèm liếm lồn ") }}
                 </div>
             </header>
         {% endif %}
