adjust some stuffs

--- a/mail/templates/sent.html
+++ b/mail/templates/sent.html
@@ -50,27 +50,31 @@
 
     #sent {
         margin:auto;
-        border: 1px solid;
+        border: 1px gray solid;
         width: 50%;
     }
 
     #sent div {
-        border-bottom: 1px solid;
+        border-bottom: 1px gray solid;
     }
 
     #sent #mail {
         word-wrap: break-word;
         overflow-y: scroll;
-        max-height: 100px;
+        max-height: 200px;
     }
 
     #mail-receiver {
         text-align: center;
         font-weight: bold;
+        color: red;
     }
 
     #content {
         text-align: left;
+        font-weight: bold;
+        font-size: large;
+        padding: 10px;
     }
 
     #floatingMail {
