change date-type input in sent.html and inbox.html

--- a/mail/templates/sent.html
+++ b/mail/templates/sent.html
@@ -129,7 +129,7 @@
         <div><input autofocus id="receiver_email" name="receiver_email" placeholder="name@example.com" type="text"></div>
         <h6>{{ email }}</h6>
         <br>
-        <div><input autofocus id="date" name="date" placeholder="yyyy-mm-dd || yyyy-mm || yyyy" type="text"></div>  
+        <div><input autofocus id="date" name="date" type="date"></div>  
         <h6>{{ date }}</h6>
         <br>  
         <button class="btn btn-primary" type="submit">Search</button>  
