--- a/mail/templates/inbox.html
+++ b/mail/templates/inbox.html
@@ -69,7 +69,7 @@
         <div><input autofocus id="sender_email" name="sender_email" placeholder="name@example.com" type="text"></div>
         <h6>{{ email }}</h6>
         <br>
-        <div><input autofocus id="date" name="date" placeholder="yyyy-mm-dd || yyyy-mm || yyyy" type="text"></div>  
+        <div><input autofocus id="date" name="date" type="date"></div>  
         <h6>{{ date }}</h6>
         <br>    
         <button class="btn btn-primary" type="submit">Search</button>
