implement finding people

--- a/mail/templates/layout.html
+++ b/mail/templates/layout.html
@@ -52,6 +52,7 @@
                 <div class="collapse navbar-collapse" id="navbar">
                     {% if session["user_id"] %}
                         <ul class="navbar-nav me-auto mt-2">
+                            <li class="nav-item"><a class="nav-link" href="/find">Find people</a></li>
                             <li class="nav-item"><a class="nav-link" href="/inbox">Inbox</a></li>
                             <li class="nav-item"><a class="nav-link" href="/sent">Sent</a></li>
                             <li class="nav-item"><a class="nav-link" href="/change_information">Change Information</a></li>
@@ -74,7 +75,7 @@
         {% if get_flashed_messages() %}
             <header>
                 <div class="alert alert-primary mb-0 text-center" role="alert">
-                    {{ get_flashed_messages() | join("thèm liếm lồn ") }}
+                    {{ get_flashed_messages() | join(" ") }}
                 </div>
             </header>
         {% endif %}
