--- a/mail/templates/inbox.html
+++ b/mail/templates/inbox.html
@@ -18,12 +18,13 @@
 
     #sent {
         margin:auto;
-        border: 1px gray solid;
+        border: 1px gray dashed;
+        border-bottom: none;
         width: 50%;
     }
 
     #sent div {
-        border-bottom: 1px gray solid;
+        border-bottom: 1px gray dashed;
     }
 
     #sent #mail {
