--- a/mail/templates/sent.html
+++ b/mail/templates/sent.html
@@ -50,12 +50,13 @@
 
     #sent {
         margin:auto;
-        border: 1px gray solid;
+        border: 1px gray dashed;
+        border-bottom: none;
         width: 50%;
     }
 
     #sent div {
-        border-bottom: 1px gray solid;
+        border-bottom: 1px gray dashed;
     }
 
     #sent #mail {
