--- a/mail/templates/sent.html
+++ b/mail/templates/sent.html
@@ -11,7 +11,7 @@
         document.querySelector('#send').onsubmit = function() {
             const receiver = document.querySelector('#receiver').value;
             const email = document.querySelector('#email').value;
-            const mail = document.querySelector('#floatingMail').value;
+            const mail = document.querySelector('#mail').value;
 
             if (receiver.length === 0)
             {
@@ -50,36 +50,37 @@
 
     #sent {
         margin:auto;
-        border: 1px gray dashed;
+        border: 1px gray solid;
+        border-top: none;
         border-bottom: none;
         width: 50%;
+        max-height: fit-content;
     }
 
     #sent div {
         border-bottom: 1px gray dashed;
     }
 
-    #sent #mail {
-        word-wrap: break-word;
-        overflow-y: scroll;
-        max-height: 200px;
-    }
 
     #mail-receiver {
         text-align: center;
         font-weight: bold;
-        color: red;
+        color: blue;
     }
 
-    #content {
+    #paragraph {
         text-align: left;
         font-weight: bold;
         font-size: large;
         padding: 10px;
+        width: 100%;
+        height: 150px;
+        border: 1px gray solid;
     }
 
-    #floatingMail {
-        height: 100px;
+    #mail {
+        height: 120px;
+        width: 600px;
     }
 
     #search {
@@ -87,7 +88,7 @@
     }
 
     #search div input {
-        width: 240px;
+        width: 245px;
     }
 
 </style>
@@ -107,7 +108,7 @@
         </div>
         <h6 id="message2">{{ message2 }}</h6>
         <div class="form-floating">
-            <input class="form-control" id="floatingMail" name="mail" type="text">
+            <textarea class="form-control" id="mail" name="mail"></textarea>
             <label for="floatingMail" class="form-label">Content</label>
         </div>
         <br>
@@ -130,7 +131,7 @@
         <div><input autofocus id="receiver_email" name="receiver_email" placeholder="name@example.com" type="text"></div>
         <h6>{{ email }}</h6>
         <br>
-        <div><input autofocus id="date" name="date" type="date"></div>  
+        <div><input autofocus id="date" name="date" type="text" placeholder="yyyy-mm-dd / yyyy-mm / yyyy"></div> 
         <h6>{{ date }}</h6>
         <br>  
         <button class="btn btn-primary" type="submit">Search</button>  
@@ -141,7 +142,7 @@
 {% for mail in mails %}
 <div id="sent">
     <div><p id="mail-receiver">{{ mail['receiver'] }} <br> {{ mail['email'] }} <br> {{ mail['date'] }}</p></div>
-    <div id="mail"><p id="content">{{ mail['mail'] }}</p></div>
+    <textarea id="paragraph" disabled>{{ mail['mail'] }}</textarea>
 </div>
 {% endfor %}
 
