--- a/mail/templates/find.html
+++ b/mail/templates/find.html
@@ -47,14 +47,31 @@
 
     #result {
         float: right;
-        width: 80%;
+        width: 75%;
         margin-right: 30px;
        
-        border-bottom: gray dashed thin;
+        border: gray dashed thin;
     }
 
     ul li {
         list-style-type: none;
+    }
+
+    ul li textarea {
+        text-align: center;
+        width: 100%;
+        height: 40px;
+        background: none;
+        border: none;
+    }
+
+    #person {
+        font-size: larger;
+        font-weight: bold;
+    }
+
+    #person-email {
+        font-weight: bold;
     }
 
 </style>
@@ -77,23 +94,27 @@
         </form>
     </div>
     <h3 id="messages">{{ message }}</h3>
-    {% for person in people %}
-    
+    <h3>{{ name }}</h3>
+    <h3>{{ email }}</h3>
+    {% for person in people %}  
     <div id="result">
-        <ul>
-            <li><h3 id="person">{{ person["name"] }}</h3></li>
-            <li><h4>{{ person["email"] }}</h4></li>
-            {% if person["birth"] %}
-            <li><h6>{{ person["birth"] }}</h6></li>
-            {% endif %}
-            {% if person["place"] %}
-            <li><h6>{{ person["place"] }}</h6></li>
-            {% endif %}
-            {% if person["number"] %}
-            <li><h6>{{ person["number"] }}</h6></li>
-            {% endif %}
-        </ul>
-        <br>
+        <form action="/add" method="post">
+            <ul>
+                <li><textarea id="person" name="name" readonly>{{ person["name"] }}</textarea></li>
+                <li><textarea id="person-email" name="email" readonly>{{ person["email"] }}</textarea></li>
+                {% if person["birth"] %}
+                <li><h6>Birth: {{ person["birth"] }}</h6></li>
+                {% endif %}
+                {% if person["place"] %}
+                <li><h6>Place: {{ person["place"] }}</h6></li>
+                {% endif %}
+                {% if person["number"] %}
+                <li><h6>Number: {{ person["number"] }}</h6></li>
+                {% endif %}
+                <button type="submit">{{ person["operation"] }}</button>
+            </ul>
+            <br>
+        </form>
     </div>
     {% endfor %}
 </div>
