--- a/mail/templates/sent.html
+++ b/mail/templates/sent.html
@@ -44,6 +44,10 @@
         color: red;
     }
 
+    h2 {
+        color: green;
+    }
+
     h6 {
         color: rgb(255, 0, 64);
     }
@@ -97,6 +101,7 @@
 
 
 {% block sent %}
+<h2>Wanna send some mails?</h2>
 <div id="send">
     <form action="/sent" method="post" id="send">
         <div class="mb-3">
