not yet implement /requests

--- a/mail/templates/inbox.html
+++ b/mail/templates/inbox.html
@@ -8,7 +8,7 @@
 <style>
      h1 {
         text-align: center;
-        color: red;
+        color: green;
     }
 
     h6 {
@@ -61,7 +61,7 @@
 {% endblock %}
 
 {% block sent %}
-<h1>To You</h1>
+<h1>From... to You</h1>
 {% endblock %}
 
 {% block main %}
