--- a/mail/templates/sent.html
+++ b/mail/templates/sent.html
@@ -101,7 +101,7 @@
 
 
 {% block sent %}
-<h2>Wanna send some mails?</h2>
+<h2>Sending mail</h2>
 <div id="send">
     <form action="/sent" method="post" id="send">
         <div class="mb-3">
@@ -121,7 +121,7 @@
         <h6 id="message4">{{ message4 }}</h6>
     </form>
 </div>
-<h1>Sent From You</h1>
+<h1>From You to...</h1>
 {% endblock %}
 
 
