--- a/mail/static/styles.css
+++ b/mail/static/styles.css
@@ -22,6 +22,10 @@ nav .navbar-brand .green
     color: #2e944b;
 }
 
+nav #navbar li {
+    text-decoration: underline;
+}
+
 #deleteAccount 
 {
     background-color:red;
