--- a/mail/templates/layout.html
+++ b/mail/templates/layout.html
@@ -52,6 +52,7 @@
                 <div class="collapse navbar-collapse" id="navbar">
                     {% if session["user_id"] %}
                         <ul class="navbar-nav me-auto mt-2">
+                            <li class="nav-item"><a class="nav-link" href="/requests">Friend requests</a></li>
                             <li class="nav-item"><a class="nav-link" href="/list">Friend list</a></li>
                             <li class="nav-item"><a class="nav-link" href="/find">Find people</a></li>
                             <li class="nav-item"><a class="nav-link" href="/inbox">Inbox</a></li>
