--- a/mail/templates/requests.html
+++ b/mail/templates/requests.html
@@ -101,14 +101,15 @@
         
         </form>
     </div>
-    <h3 id="message">{{ message }}</h3>
+    
     <h3>{{ name }}</h3> <!--Usage for checking input/output-->
     <h3>{{ email }}</h3> <!--Usage for checking input/output-->
 
     <h2>Requests</h2>
+    <h3 id="message">{{ message }}</h3>
     {% for person in people %}  
     <div id="result">
-        <form action="/accept" method="post">
+        <form action="/add" method="post">
             <ul>
                 <li><textarea id="person" name="name" readonly>{{ person["name"] }}</textarea></li>
                 <li><textarea id="person-email" name="email" readonly>{{ person["email"] }}</textarea></li>
