chỉnh mấy cái CSS nữa là xong

--- a/mail/templates/layout.html
+++ b/mail/templates/layout.html
@@ -56,7 +56,7 @@
                             <li class="nav-item"><a class="nav-link" href="/list">Friend list</a></li>
                             <li class="nav-item"><a class="nav-link" href="/find">Find people</a></li>
                             <li class="nav-item"><a class="nav-link" href="/inbox">Inbox</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/sent">Sent</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/sending">Sent</a></li>
                             <li class="nav-item"><a class="nav-link" href="/change_information">Change Information</a></li>
                         </ul>
                         <ul class="navbar-nav ms-auto mt-2">
@@ -87,8 +87,8 @@
             <!--information.html-->
             {% block information %}{% endblock %}
 
-            <!--sent.html-->
-            {% block sent %}{% endblock %}
+            <!--sending.html-->
+            {% block sending %}{% endblock %}
 
 
             <!--add_friends.html-->
