--- a/mail/templates/list.html
+++ b/mail/templates/list.html
@@ -135,7 +135,7 @@
 
         
         <!--Send mail-->
-        <form action="/sent" method="post">
+        <form action="/send" method="post">
             <ul>
                 <li><textarea class="hidden" name="name" readonly>{{ person["name"] }}</textarea></li>
                 <li><textarea class="hidden" name="email" readonly>{{ person["email"] }}</textarea></li>
